<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/nav_customer"
        android:icon="@drawable/ic_customer"
        android:title="@string/customers" />

    <item
        android:id="@+id/nav_products"
        android:icon="@drawable/ic_products"
        android:title="@string/products" />

    <item
        android:id="@+id/nav_sales"
        android:icon="@drawable/ic_sales"
        android:title="@string/sales" />

    <item
        android:id="@+id/nav_expense"
        android:icon="@drawable/ic_expense"
        android:title="@string/expenses" />

    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/ic_reports"
        android:title="@string/reports" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

</menu>
