<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_splash"
    tools:context=".activities.SplashActivity">

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/ic_logo_cart"
        app:layout_constraintBottom_toTopOf="@id/splash_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/splash_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bilingual_app_name"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/developer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/version_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/version_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_number"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
